# Workshops

./: .gitignore  README.md
2023-fall/schematic-fall2023/kicad/wc-demo/: wc-demo.kicad_prl  wc-demo.kicad_pro  wc-demo.kicad_sch
advanced-soldering-spring2021/: slides.tex
cpp-fall2020/: CMakeLists.txt  fib.cc  max.cc  maxt.cc  slides.tex  vec.cc
cpp-fall2021/: Makefile  slides.md
cpp-spring2021/: slides.tex
cpp-spring2022/: slides.md
embedded-fall2021/: slides.tex
embedded-spring2021/: .gitignore  slides.tex
embedded-spring2022/: slides.tex
fpga-fall2021/: Makefile  register.v  register_tb.v  slides.md
git-fall2020/: .gitignore  greet_merge.cpp  slides.tex
git-fall2021/: notes.md  slides.tex
git-spring2021/: greet_base.cpp  greet_f1.cpp  greet_f2.cpp  greet_merge.cpp  slides.tex
git-spring2022/: slides.tex
hardware-handbook-spring2021/: main.tex
latex-fall2020/: math.aux  math.fdb_latexmk  math.fls  math.tex  slides.aux  slides.fdb_latexmk  slides.fls  slides.tex
linux-fall2020/: slides.aux  slides.fdb_latexmk  slides.fls  slides.tex
linux-fall2021/: Makefile  slides.tex
linux-spring2020/: present.fdb_latexmk  present.fls  present.tex
linux-spring2021/: slides.tex
linux-spring2022/: slides.tex
